; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_openvpn.c_write_pid.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_openvpn.c_write_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"w\00", align 1
@M_ERR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"Open error on pid file %s\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"%u\0A\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"Close error on pid file %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @write_pid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_pid(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %29

7:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = call i32* @platform_fopen(i8* %8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %16, label %12

12:                                               ; preds = %7
  %13 = load i32, i32* @M_ERR, align 4
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @msg(i32 %13, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0), i8* %14)
  br label %16

16:                                               ; preds = %12, %7
  %17 = call i32 (...) @platform_getpid()
  store i32 %17, i32* %3, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @fprintf(i32* %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %19)
  %21 = load i32*, i32** %4, align 8
  %22 = call i64 @fclose(i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %16
  %25 = load i32, i32* @M_ERR, align 4
  %26 = load i8*, i8** %2, align 8
  %27 = call i32 @msg(i32 %25, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0), i8* %26)
  br label %28

28:                                               ; preds = %24, %16
  br label %29

29:                                               ; preds = %28, %1
  ret void
}

declare dso_local i32* @platform_fopen(i8*, i8*) #1

declare dso_local i32 @msg(i32, i8*, i8*) #1

declare dso_local i32 @platform_getpid(...) #1

declare dso_local i32 @fprintf(i32*, i8*, i32) #1

declare dso_local i64 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
